--- a/Assets/css/notifications.css
+++ b/Assets/css/notifications.css
@@ -31,6 +31,7 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .notification-list-wrapper .notification-list-item i {
@@ -65,4 +66,19 @@
     font-size: 16px;
     font-weight: 500;
     display: inline-block;
+}
+
+.notification-list-content .notification-list-content-next {
+    transition: 1s ease-in-out;
+    transform: translateY(-100%);
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+}
+
+.notification-list-content .show {
+    transform: translateY(0%);
+    height: auto;
+    opacity: 1;
+    overflow: visible;
 }
