--- a/Assets/css/notifications.css
+++ b/Assets/css/notifications.css
@@ -69,16 +69,17 @@
 }
 
 .notification-list-content .notification-list-content-next {
-    transition: 1s ease-in-out;
-    transform: translateY(-100%);
     height: 0;
+    visibility: hidden;
     opacity: 0;
+    transition: visibility 0s linear 2s, opacity 2s;
     overflow: hidden;
 }
 
 .notification-list-content .show {
-    transform: translateY(0%);
     height: auto;
+    visibility: visible;
     opacity: 1;
+    transition: visibility 0s linear 0s, opacity 2s;
     overflow: visible;
 }
