--- a/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/components/ErrorBoundary/ErrorBoundary.module.scss
+++ b/AGI.Corp.Intranet.Home/src/webparts/agiIntranetHomeMain/components/ErrorBoundary/ErrorBoundary.module.scss
@@ -1,10 +1,13 @@
 .errorBoundary {
-  max-width: 90%;
-  margin: 0 auto;
-  padding: 40px 0;
+  max-width: 100%;
+  margin: 0;
+  padding: 0px 12px;
 
   .error {
     font-weight: 600;
-    color: #300B55;
+    color: #9D0D71;
+    border: 1px solid #9d0d71;
+    padding: 20px;
+    border-radius: 8px;
   }
 }
