--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -1185,3 +1185,33 @@ input[type="radio"]:checked+label::after {
 }
 
 /* Date Picker End*/
+
+/* My Apps */
+.my-app .carousel .carousel-control-prev,
+.my-app .carousel .carousel-control-next {
+    background: #f9f3f8;
+    margin: 0;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    display: inline-block;
+    top: 0;
+    transform: translate(0px, 0px);
+    opacity: 1;
+}
+
+.my-app .carousel .carousel-control-prev .carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%239e1f7d'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+    height: 12px;
+}
+
+.my-app .carousel .carousel-control-next .carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%239e1f7d'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    height: 12px;
+}
+
+.my-app .navlink {
+    text-decoration: none;
+}
+
+/* My Apps End*/
