--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -1215,3 +1215,10 @@ input[type="radio"]:checked+label::after {
 }
 
 /* My Apps End*/
+
+/* Rewards */
+.rewards-image {
+    min-height: 330px;
+}
+
+/* Rewards End */
