dynamic company events section

--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -1209,3 +1209,14 @@ input[type="radio"]:checked+label::after {
 }
 
 /* My Apps End*/
+
+/* Company Events */
+.company-event a {
+    text-decoration: none;
+    color: #212529;
+}
+
+.company-event a:hover {
+    text-decoration: none;
+    color: #212529;
+}
