ui fix for calendar

--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -912,6 +912,7 @@ input[type="radio"]:checked+label::after {
 .DayPicker-Day--today:not(.DayPicker-Day--outside) {
     background-color: #9D0D71;
     color: #fff !important;
+    border: 2px solid #9D0D71;
 }
 
 .DayPicker-Day--event:not(.DayPicker-Day--outside):after {
@@ -932,13 +933,15 @@ input[type="radio"]:checked+label::after {
 
 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
     position: relative;
-    background-color: #9D0D71;
-    color: #f0f8ff;
+    color: #ffffff;
+    background: #9d0e719c;
+    border: 2px solid #9D0D71;
 }
 
 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
     opacity: 50%;
     background-color: #9D0D71;
+    color: #fff;
 }
 
 .datebox.Event {
