--- a/Assets/css/policies.css
+++ b/Assets/css/policies.css
@@ -48,8 +48,12 @@
     padding: 30px;
     border: 1px solid #DFDFE1;
     border-radius: 5px;
-
-
+    max-height: 210px;
+    overflow: hidden;
+    position: relative;
+}
+.policy-content-wrapper .row.align-items-center{
+    height: 100%;
 }
 
 .policy-content-wrapper .policy-content h4.title {
@@ -76,7 +80,23 @@
     color: #666666;
     margin-bottom: 0;
 }
-
+.policy-content-wrapper .policy-content p.description span{
+    overflow: hidden;
+    text-overflow: ellipsis;
+     display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+.policy-content-wrapper .policy-content .title{
+    overflow: hidden;
+    text-overflow: ellipsis;
+     display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.policy-icon-section ul{
+    margin-bottom: 0;
+}
 .policy-icon-section ul li {
     margin-bottom: 20px;
     list-style: none;
