--- a/Assets/css/policydetail.css
+++ b/Assets/css/policydetail.css
@@ -393,6 +393,9 @@
     display: flex;
     align-items: center;
 }
+.top-switch .col.text-end .sec-btn{
+    margin-left: 15px;
+}
 
 @media (max-width:991px) {
     .top-switch {
@@ -417,6 +420,9 @@
 
     .top-switch .sec-btn:first-child {
         margin-bottom: 15px;
+    }
+    .top-switch .col.text-end .sec-btn{
+        margin-left: 0;
     }
 }
 
