--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -218,6 +218,14 @@ h2.chart-heading {
     opacity: 1;
     padding: 15px 0 20px 0;
 }
+@media (max-width:991px){
+    #qbpx-container h5{
+        font: normal normal 600 14px/20 px Gill Sans;
+    }
+    #qbox-container img{
+        max-width: 170px;
+    }
+}
 #qbox-container .btn{
     margin-bottom: 15px;
 }
@@ -1161,3 +1169,16 @@ input[type="radio"]:checked+label::after {
 }
 
 /* Additional Styles End*/
+
+
+/* css from 15-09-2022 */
+/* @media (min-width:1800px){
+    .container{
+        max-width: 1566px;
+    }
+}
+@media (min-width:1660px){
+    .container{
+        max-width: 1600px;
+    }
+} */
