--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -770,7 +770,7 @@ nav.navbar.topnav-menu {
 }
 
 .snap-share {
-    margin-top: 2rem;
+    margin-top: 0;
 }
 
 
@@ -1289,6 +1289,14 @@ nav.navbar.topnav-menu {
   transform: translate(0px, 0px);
   opacity: 1;
 }
+.home-page .carousel-control-next{
+    margin-left: 10px !important;;
+}
+.home-page .carousel-control-next, .home-page .carousel-control-prev{
+    transition: all 0.4s;
+    
+}
+.home-page .carousel-control-next:hover, .home-page .carousel-control-prev:hover
 
 .announcement-section .carousel .carousel-control-prev .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%239e1f7d'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
@@ -1323,17 +1331,15 @@ nav.navbar.topnav-menu {
 }
 
 .announcement-desc{
-	
 	font: normal normal normal 16px/23px Gill Sans;
 	letter-spacing: 0px;
 	color: #555555;
-	 display: -webkit-box;
-	  
-		-webkit-line-clamp: 2;
-		-webkit-box-orient: vertical;
-		overflow: hidden;
-		line-height: 21px;
-		margin-bottom: 10px;
+    display: -webkit-box!important;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    line-height: 21px;
+    margin-bottom: 10px;
 }
 
 
@@ -4521,3 +4527,18 @@ ul.pagination {
   cursor: pointer; /* Add a pointer on hover */
 }
 
+
+/* Css from 16-09-2022 */
+.main-content .content-wrapper .home-page .announcement-section{
+    margin-top: 1.5rem;
+}
+@media (min-width:1800px){
+    .container{
+        max-width: 1566px!important;
+    }
+}
+@media (min-width:1660px){
+    .container{
+        max-width: 1600px!important;
+    }
+}
