--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -339,6 +339,7 @@ nav.navbar.topnav-menu {
     /*top: 64px;*/
     top:70px;
     font-family:'Gill Sans';
+    z-index: 99999;
 }
 
 .main-nav .navbar-nav .dropdown .dropdown-menu::before {
@@ -1079,6 +1080,13 @@ nav.navbar.topnav-menu {
   border-radius: 8px;
   margin-right: 15px;
 }
+@media (max-width: 1440px){
+    .home-page .app-item .app-item-icon{
+        min-width:48px;
+        max-height:48px;
+        margin-right: 10px;
+    }
+}
 
 .home-page .app-item .app-item-icon img {
   width: 32px;
@@ -1090,6 +1098,11 @@ nav.navbar.topnav-menu {
   letter-spacing: 0px;
   color: #000000;
   line-height: normal;
+}
+@media (max-width:1440px){
+    .home-page .app-wrapper h5{
+        font-size:16px;
+    }
 }
 
 
@@ -1292,11 +1305,6 @@ nav.navbar.topnav-menu {
 .home-page .carousel-control-next{
     margin-left: 10px !important;;
 }
-.home-page .carousel-control-next, .home-page .carousel-control-prev{
-    transition: all 0.4s;
-    
-}
-.home-page .carousel-control-next:hover, .home-page .carousel-control-prev:hover
 
 .announcement-section .carousel .carousel-control-prev .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%239e1f7d'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
@@ -3948,7 +3956,7 @@ form.newsletter-form {
 }*/
 
 .social-icon-footer ul li a img.me-2 {
-        margin: 0 !important;
+        margin: auto !important;
         position: relative;
         top: 0;
         left: 0;
@@ -4530,7 +4538,94 @@ ul.pagination {
 
 /* Css from 16-09-2022 */
 .main-content .content-wrapper .home-page .announcement-section{
-    margin-top: 1.5rem;
+    margin-top: 0rem;
+}
+.main-content .content-wrapper .home-page .announcement-section .card{
+    border-radius:0px 0px 8px 8px!important;
+}
+.main-content .content-wrapper .home-page .latest-news-section .card{
+    border-radius:8px 8px 0px 0px !important;
+    height:100%;
+}
+.main-content .content-wrapper .home-page .announcement-section .card-body{
+    padding-top:0;
+}
+.main-content .content-wrapper .home-page .announcement-section .card-header{
+    padding-top:0;
+}
+@media (max-width:1440px){
+    .main-content .content-wrapper .home-page .announcement-section .icon-announcement.text-dark{
+        max-width:180px;
+    }
+    .main-content .content-wrapper .home-page .announcement-section .icon-announcement.text-dark{
+        object-fit:cover;
+        object-position: center center;
+        overflow: hidden;
+    }
+}
+.main-content .content-wrapper .home-page #myApps .card-header{
+    border-radius:0px!important;
+}
+.main-content .content-wrapper .home-page .card.calendar.rounded-0{
+    border-radius:8px!important;
+} 
+.home-page .icon-links{
+    border-radius:8px 8px 0 0;
+    overflow: hidden;
+}
+.snap-share-section .img-with-text img{
+    min-height:215px;
+}
+.snap-share-section .text i img{
+    min-height:auto;
+}
+.home-page .calendar .DayPicker .date-wrap {
+    display:block;
+}
+.home-page .calendar .DayPicker .date-wrap span{
+    display: block;
+    clear:both;
+}
+.home-page .company-event .text-break{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
+.main-content .row.home-page .col-xl-8.col-sm-12 .row{
+    /* height:100%; */
+}
+.employee-offer-section .carousel-item img.w-100, .social-media-section .carousel-item img.w-100{
+    min-height:20em;
+    max-height:20em;
+    object-fit:cover;
+    object-position:center center;
+}
+#socialMediaControls{
+    width:100%;
+}
+
+.filter-section input[type="radio"] {
+    display: block;
+}
+
+.filter-section .form-check {
+    text-align: left;
+}
+
+.filter-section .form-check-input:checked {
+    background-color: #9C0D70;
+    border-color: #300B55;
+}
+
+.filter-section .form-select select {
+    width: 100%;
+    max-width: 350px;
+}
+
+.filter-section .form-check,
+.filter-section .form-check label {
+    cursor: pointer;
 }
 @media (min-width:1800px){
     .container{
