--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -4554,10 +4554,77 @@ ul.pagination {
 .main-content .content-wrapper .home-page .announcement-section .card-header{
     padding-top:0;
 }
+/* Loader*/
+
+
+
+.loaderContainer {
+
+
+
+  width: 100%;
+
+  height: 100%;
+
+  position: absolute;
+
+  top: 0;
+
+  left: 0;
+
+  display: flex;
+
+  justify-content: center;
+
+  align-items: center;
+
+
+
+}
+
+
+
+.loader {
+
+  border: 2px solid #f3f3f3;
+
+  /* Light grey */
+
+  border-top: 2px solid #6F1D69;
+
+  /* Blue */
+
+  border-radius: 50%;
+
+  width: 60px;
+
+  height: 60px;
+
+  animation: spin 2s linear infinite;
+
+}
+
+
+
+@keyframes spin {
+
+  0% {
+
+    transform: rotate(0deg);
+
+  }
+
+
+
+  100% {
+
+    transform: rotate(360deg);
+
+  }
+
+}
 
 /*Chatbox*/
-
-
 
 .chatbox-wrapper {
             position: fixed;
@@ -4799,6 +4866,7 @@ ul.pagination {
 .home-page .snap-share-section.desktop{
     display: block;
 }
+
 @media (max-width: 991px){
     .home-page .snap-share-section.desktop{
         display: none;
