--- a/Assets/css/snapandshare.css
+++ b/Assets/css/snapandshare.css
@@ -41,7 +41,7 @@
 .main-content {
     background: #EFEFEF;
     width: 100%;
-    min-height: 100% !important;
+    /* min-height: 100% !important; */
 }
 
 .main-content .content-wrapper {
