--- a/Assets/css/snapandshare.css
+++ b/Assets/css/snapandshare.css
@@ -125,9 +125,9 @@
 			display: flex;
 			flex-direction: row;
 			flex-wrap: wrap;
-			gap: 20px;
+			gap: 40px;
 			width: 100%;
-			justify-content: space-between;
+			justify-content: inherit;
 		}
 
 		.img-with-text {
