--- a/Assets/css/policies.css
+++ b/Assets/css/policies.css
@@ -8,6 +8,13 @@
 
 }
 
+.policy-content-wrapper .policy-content p.description span {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 .sidebar-menu {
     padding-top: 15px;
     padding-bottom: 0;
@@ -48,7 +55,7 @@
     padding: 30px;
     border: 1px solid #DFDFE1;
     border-radius: 5px;
-    /*max-height: 210px;*/
+    max-height: 210px !important;
     max-height: max-content;
     overflow: hidden;
     position: relative;
@@ -87,7 +94,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
